Align FileSystemAbstraction with java FileSystem
After the move to NIO there were a few differences left:
 * `mkdir` would return a boolean to indicate success
 * `getFileSize` would never fail, and return 0 on failure
 * `deleteFile` would return a boolean to indicate success
 * `listFiles` would never fail, returning `null` on both empty and failure
 * `lastModifiedTime` would never fail, and return 0 on failure.

 All of the above will now throw the appropriate exception when an error occurs.